assets/styles/index.css
/* ... */
body {
	padding-left: var(--safe--inset--left, 0rem);
	padding-right: var(--safe--inset--right, 0rem);
	--logo--height--scaled: calc(var(--logo--height) * var(--logo--scale, 1));
	--scroll--offset: calc(var(--logo--height--scaled) + var(--tagline--height) + var(--margin) * 4);
	--scroll--offset--about: calc(var(--tagline--height) + var(--links--height) + var(--margin) * 4);
}

@media (min-width: 102.5em) {
	body {
		margin-left: auto;
		margin-right: auto;
		width: 164rem;
	}
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body {
		--scroll--offset: var(--margin--vertical);
		--scroll--offset--about: calc(var(--margin--vertical) - 0.1rem);
	}
}

body #art,
body #media,
body #science {
	scroll-margin-top: var(--scroll--offset);
}

body #about {
	scroll-margin-top: var(--scroll--offset--about);
}

body.invert {
	--color: black;
	--color--background: white;
	--link--highlight: var(--color--link);
}

body.invert .active {
	--color: var(--color--accent);
}

body,
body nav,
body aside {
	--color--transition: 200ms;
	background: var(--color--background);
	transition-duration: var(--color--transition);
	transition-property: background;
	transition-timing-function: linear;
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {

	body nav,
	body aside {
		background: initial;
	}
}

body p {
	transition-delay: calc(var(--color--transition) / 4);
	transition-duration: calc(var(--color--transition) / 2);
	transition-property: color;
	transition-timing-function: linear;
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {

	body > main,
	body > footer {
		column-gap: var(--margin);
		display: grid;
		grid-template-columns: var(--column--ratio);
		padding-left: var(--margin);
		padding-right: var(--margin);
	}
}

body > main {
	position: sticky;
	top: calc(-1 * var(--main--height) + var(--tagline--height) + var(--margin--vertical) * 2 - 0.1rem);
}

body > main > nav {
	--nav--scroll: calc((var(--vh--initial, 100vh) - var(--logo--height) - var(--tagline--height) - var(--margin--vertical) * 3) / 2);
	--nav--scroll--offset: calc(-100vh + var(--logo--height--scaled) + var(--tagline--height) + var(--margin--vertical) * 3);
	display: flex;
	flex-direction: column;
	height: calc(100vh + var(--nav--scroll));
	justify-content: space-between;
	padding-bottom: var(--margin--vertical);
	padding-left: var(--margin);
	padding-right: var(--margin);
	padding-top: var(--margin--vertical);
	position: sticky;
	top: calc(var(--nav--scroll--offset) - var(--nav--scroll));
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > nav {
		padding-left: initial;
		padding-right: initial;
		top: calc(-1 * var(--nav--scroll));
	}
}

body > main > nav > section:first-child {
	flex-shrink: 0;
	height: var(--logo--height--scaled);
	margin-bottom: calc(var(--tagline--height) + var(--margin--vertical));
	margin-top: var(--nav--scroll);
	position: sticky;
	top: var(--margin--vertical);
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > nav > section:first-child {
		margin-bottom: calc(100vh - var(--logo--height--scaled) - var(--margin--vertical) * 2);
	}
}

body > main > nav > section:first-child > h1 {
	--typography--size: var(--typography--size--logo);
	--typography--leading: 5/6;
	--transition--duration: 100ms;
	align-items: start;
	display: flex;
	flex-direction: column;
	position: absolute;
	transform-origin: 0px -0.025em;
	transform: scale(calc(1 - (1 - var(--logo--scale)) * var(--logo--scroll)));
	transition-delay: calc(var(--color--transition) / 4), 0ms;
	transition-duration: calc(var(--color--transition) / 2), var(--transition--duration);
	transition-property: color, transform;
	transition-timing-function: linear;
	will-change: transform;
}

@media (min-width: 48em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > nav > section:first-child > h1 {
		--transition--duration: 50ms;
	}
}

body > main > nav > section:first-child > h1 > a {
	--link--outline--override: calc((1 + (var(--logo--scale) * var(--logo--scroll))) * var(--link--outline));
	border-bottom: initial;
	border-top: initial;
	color: var(--color);
	margin-bottom: initial;
	margin-top: initial;
	pointer-events: none;
	position: relative;
	transition: color calc(var(--color--transition) / 2) linear;
}

body > main > nav > section:first-child > h1 > a:before {
	content: "";
	display: block;
	height: 100%;
	pointer-events: auto;
	position: absolute;
	width: 100%;
}

body > main > nav > section:first-child > h1 [href="#art"] .a {
	letter-spacing: -0.04em;
}

body > main > nav > section:first-child > h1 [href="#media"] .m {
	letter-spacing: -0.04em;
}

body > main > nav > section:first-child > h1 [href="#media"] .d {
	letter-spacing: 0.02em;
}

body > main > nav > section:first-child > h1 [href="#science"] .s {
	letter-spacing: -0.01em;
}

body > main > nav > section:first-child > h1 [href="#science"] .i {
	letter-spacing: -0.015em;
}

body > main > nav > section:first-child > h1 [href="#science"] .n {
	letter-spacing: -0.02em;
}

body > main > nav > section:first-child > h1 [href="#science"] .e {
	letter-spacing: -0.02em;
}

body > main > nav > section:last-child {
	bottom: var(--margin--vertical);
	display: flex;
	flex-shrink: 0;
	position: sticky;
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > nav > section:last-child {
		margin-top: calc(-1 * var(--tagline--height));
	}
}

body > main > nav > section:last-child > a > p {
	--typography--leading: var(--typography--leading--tagline);
	--typography--size: var(--typography--size--tagline);
}
/* ... */

